# OHD-SVM

./: CMakeLists.txt  README.md  calc_x2.cu  calc_x2.h  check_cache.h  csr.cu  csr.h  cuda_utils.h  cudaerror.h  debug.cpp  debug.h  dev_vars.h  kernels_klocal.h  kernels_select_ws.h  kernels_smo.h  ohdSVM.cu  ohdSVM.h
